[gd_scene load_steps=5 format=3 uid="uid://63s1ofr7rbln"]

[ext_resource type="Texture2D" uid="uid://bdxdboyp061b2" path="res://graphics/enemies/Bomb_1.png" id="1_ax7k4"]
[ext_resource type="Script" path="res://scenes/enemies/enemy_robot.gd" id="1_fhakk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7m6lp"]
size = Vector2(50, 52)

[sub_resource type="CircleShape2D" id="CircleShape2D_3avye"]
radius = 443.0

[node name="EnemyRobot" type="Area2D"]
collision_layer = 8
collision_mask = 79
script = ExtResource("1_fhakk")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_ax7k4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7m6lp")

[node name="HitTimer" type="Timer" parent="."]

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_3avye")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
